# osm4routing2

./: Cargo.toml  LICENCE.md  create_tables.sql  import_postgres.sh  readme.md
.github/worflows/: tests.yml
.github/workflows/: tests.yml
src/: lib.rs  main.rs
src/lib/: categorize.rs  mod.rs  models  models.rs  reader.rs  writers.rs
src/lib/test_data/: minimal.osm
src/osm4routing/: categorize.rs  error.rs  loader.rs  mod.rs  models.rs  reader.rs  writers.rs
src/osm4routing/test_data/: minimal.osm.pbf  ways_to_merge.osm.pbf
