[package]
name = "osm4routing"
edition = "2024"
version = "0.8.1"
authors = ["Tristram Gräbener <tristramg@gmail.com>"]
description = "Convert OpenStreetMap data into routing friendly CSV"
homepage = "https://github.com/Tristramg/osm4routing2"
readme = "readme.md"
license = "MIT"

[dependencies]
osmpbfreader = "0.19.1"
ahash = "0.8"
csv = "1.4.0"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
geo-types = "0.7"

[lib]
name = "osm4routing"
